# cafa

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  project_overview.md  pyproject.toml
notebooks/: cafa_exploration.ipynb  data_exploration.ipynb  data_handling.ipynb  execute_data_flow.ipynb  model.ipynb
src/cafa/: __init__.py  pyproject.toml  version.py
src/cafa/etl/: data_flow.py  extraction.py  prep_data.py  transformations.py
