[project]
name = "cafa"
authors = [
    { name = "Corinne Sandor" },
    { name = "Eric Kerecz" },
]

dependencies = [
"bio",
"jupyterlab",
"kaggle",
"matplotlib",
"numpy",
"obonet",
"pandas",
"scikit-learn",
"seaborn"
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Soruce = "https://github.com/corinne-sandor/cafa"