[project]
name = "cafa"
authors = [
    { name = "Corinne Sandor" },
    { name = "Eric Kerecz" },
]

license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip = [".gitignore",]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["matplotlib", "numpy", "pandas", "scikit-learn", "seaborn"]

[tool.flit.module]
name = "cafa"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black"
]

dependencies = [
"bio",
"jupyterlab",
"kaggle",
"matplotlib",
"numpy",
"obonet",
"pandas",
"scikit-learn",
"seaborn"
]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/corinne-sandor/cafa"
